--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
         <section id="story">
             <h2>A ideia por detrás da minha Aplicação</h2>
-            <p>Uma ideia que relacione modelos de gestão com o Verão/p>
+            <p>Uma ideia que relacione modelos de gestão com o Verão</p>
         </section>
 
         <section id="client">
