--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2>Main Features</h2>
             <ul>
                 <li>1: Reservar quartos num determinado hotel</li>
-                <li>2: Página pública onde se encontram todas as informações sobre os hotéis</li>
+                <li>2: Página pública onde se encontram todas as informações sobre os hotéis com comentários e classificação</li>
                 <li>3: Página privada com recurso a login e registo PHE onde cada utilizador vê as suas reservas e fazer comentários na página de cada hotel</li>
             </ul>
         </section>
