--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
 
         <section id="demo">
-            <h2>Está na hora de ver uma Demo</h2>
+            <h2>Está na hora de ver uma Demo!</h2>
         </section>
     </main>
 
