--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
         <section id="story">
             <h2>A ideia por detrás da minha Aplicação</h2>
-            <p>Algo que relacione modelos de gestão com o Verão...</p>
+            <p>Algo que relacione modelos de gestão com o Verão</p>
         </section>
 
         <section id="client">
