--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 
         <section id="client">
             <h2>Quem é o Cliente?</h2>
-            <p>Sou eu, tu e qualquer pessoa que queira viajar. Admnistração da cadeia de Hotéis</p>
+            <p>Sou eu, tu e qualquer pessoa que queira viajar</p>
+            <p>Administração da cadeia de Hotéis</p>
         </section>
 
         <section id="objectives">
