--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section id="client">
             <h2>Quem é o Cliente?</h2>
-            <p>Sou eu, tu e qualquer pessoa que queira viajar</p>
+            <p>Sou eu, tu e qualquer pessoa que queira viajar -> Página pública e Clientes</p>
             <p>Administração da cadeia de Hotéis</p>
         </section>
 
