--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                 <li>Charts and detailed reporting</li>
             </ul>
         </section>
+        <section id="relational-model">
+            <h2>Relational Model</h2>
+            <img id="relational-model-image" src="ameliahotel02.png" alt="Relational Model Diagram">
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Hotels Group Amelia Management System</p>
